--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- =========================== -->
    
     <div class="cardcontainer-fluid bg-dark p-5 text-white text-center">
-        <img src="img/businesswoman-pngrepo-com.png" alt="woman" class="img fluid">
+        <img src="img/woman-svgrepo-com.svg" alt="woman" class="img fluid">
         <div class="card-body">
             <h1 class="display-4">Salut,moi c'est Fatima à Colombbus</h1>
             <p>Je suis développeuse-intégratrice à Colombbus</p>
@@ -216,9 +216,37 @@
   
       </div>
     <!-- fin div container -->
-    <footer class="row mt-4">
+    <footer class="row mt-4 bg-dark text-white">
         <h4 class="display-4  text-center" id="contact">Contactez-moi</h4>
+        <div class="row">
+          <div class="col-12">
+            <form action="#" method="post" id="contacter">
+                  <div class="mb-3">
+                      <label for="prenom" class="form-label">Prénom*</label>
+                      <input type="text" class="form-control" id="prenom" name="prenom">
+                    </div>
 
+                    <div class="mb-3">
+                      <label for="nom" class="form-label">Nom*</label>
+                      <input type="text" class="form-control" id="nom" name="nom">
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="email" class="form-label">Email *</label>
+                      <input type="email" class="form-control" id="email" name="email">
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="message" class="form-label">Votre message*</label>
+                      <textarea class="form-control" id="message" rows="5"></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-light" name="envoyez" id="envoyez" value="envoyez">Envoyez votre message</button>
+
+            </form>
+          </div>
+      </div>
+      <p> &copy;Copyright-Fatima</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- Bootstrap Bundle with Popper -->
